--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -11,6 +11,12 @@
  urldate = {2019-10-08}
 }
 
+@online{NoMansSkyDevelopment,
+ title = {Development of No Man's Sky},
+ url = {https://en.wikipedia.org/wiki/Development_of_No_Man\%27s_Sky},
+ urldate = {2020-05-21}
+}
+
 @online{vertebrateExtraLimbs,
  title = {Vertebrate with Extra Limbs},
  url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/VertebrateWithExtraLimbs},
@@ -27,6 +33,12 @@
  title = {Pegasus},
  url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus},
  urldate = {2020-05-07}
+}
+
+@online{direhorse,
+ title = {Avatar Schreckenspferd},
+ url = {https://james-camerons-avatar.fandom.com/de/wiki/Schreckenspferd},
+ urldate = {2020-05-21}
 }
 
 @article{ArcLengthParametrization,
@@ -76,6 +88,66 @@
  year = {2013},
  type = {Masterarbeit}
 }
+
+%%%%%%%%%%%%%
+% Animation %
+%%%%%%%%%%%%%
+
+@online{Maya,
+ title = {Maya},
+ url = {https://www.autodesk.com/products/maya/overview},
+ urldate = {2020-05-21}
+}
+
+@online{MayaSkeletonHierarchy,
+ title = {Maya User Guide},
+ subtitle = {Skeleton Hierarchy},
+ url = {https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2016/ENU/Maya/files/GUID-DC88B9A7-593B-427E-9BED-4D7822B0E0B6-htm.html},
+ urldate = {2020-05-21}
+}
+
+@online{Ziva,
+ title = {Ziva},
+ url = {https://zivadynamics.com/},
+ urldate = {2020-05-21}
+}
+
+@online{ZivaGeneralSetup,
+ title = {Ziva},
+ subtitle = {General Character Setup},
+ url = {https://zivadynamics.com/character-docs/general-setup},
+ urldate = {2020-05-21}
+}
+
+@online{3dsMax,
+ title = {3ds Max},
+ url = {https://www.autodesk.de/products/3ds-max/overview},
+ urldate = {2020-05-21}
+}
+
+@online{3dsMaxBiped,
+ title = {3ds Max},
+ subtitle = {Understanding Biped},
+ url = {https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2017/ENU/3DSMax/files/GUID-C828940D-A40E-4A4C-96C5-D936DC3951E1-htm.html},
+ urldate = {2020-05-21}
+}
+
+@article{sporeanim,
+ author = {Hecker, Chris and Raabe, Bernd and Enslow, Ryan and Deweese, John},
+ year = {2008},
+ month = {09},
+ title = {Real-time motion retargeting to highly varied user-created morphologies},
+ volume = {27},
+ journal = {ACM Trans. Graph. Article},
+ url = {https://dl.acm.org/doi/10.1145/1360612.1360626}
+}
+
+@online{Spore,
+ title = {Spore},
+ url = {www.spore.com},
+ urldate = {2020-05-21}
+}
+
 
 %%%%%%%%%%%%%%%%%%
 % Formal Grammar %
