--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -81,6 +81,18 @@
  year = {2018}
 }
 
+@inproceedings{IKLegs,
+ author = {Girard, Michael and Maciejewski, Anthony},
+ year = {1985},
+ month = {07},
+ pages = {263-270},
+ title = {Computational Modeling for the Computer Animation of Legged Figures},
+ volume = {19},
+ journal = {ACM Siggraph Computer Graphics},
+ doi = {10.1145/325334.325244},
+ url = {https://dl.acm.org/doi/10.1145/325334.325244}
+}
+
 @thesis{JonHudson,
  author = {Hudson, Jon},
  title = {Creature Generation using Genetic Algorithms and Auto-Rigging},
