Section on QQ diagrams and sorted bibliography

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -1,44 +1,9 @@
 
 @online{background,
- title = {{$360^\circ$}-Bild einer kleinen Höhle},
+ title = {HDRI Haven},
+ subtitle = {{$360^\circ$}-Bild einer kleinen Höhle},
  url = {https://hdrihaven.com/hdri/?c=nature&h=small_cave},
  urldate = {2020-05-20}
-}
-
-@online{NoMansSky,
- title = {No Man's Sky},
- url = {https://www.nomanssky.com/},
- urldate = {2019-10-08}
-}
-
-@online{NoMansSkyDevelopment,
- title = {Development of No Man's Sky},
- url = {https://en.wikipedia.org/wiki/Development_of_No_Man\%27s_Sky},
- urldate = {2020-05-21}
-}
-
-@online{vertebrateExtraLimbs,
- title = {Vertebrate with Extra Limbs},
- url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/VertebrateWithExtraLimbs},
- urldate = {2020-05-07}
-}
-
-@online{centaurs,
- title = {Our Centaurs Are Different aka: Centauroid Form},
- url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/CentauroidForm},
- urldate = {2020-05-07}
-}
-
-@online{pegasus,
- title = {Pegasus},
- url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus},
- urldate = {2020-05-07}
-}
-
-@online{direhorse,
- title = {Avatar Schreckenspferd},
- url = {https://james-camerons-avatar.fandom.com/de/wiki/Schreckenspferd},
- urldate = {2020-05-21}
 }
 
 @article{ArcLengthParametrization,
@@ -70,6 +35,17 @@
  address={Beachwood, Ohio}
 }
 
+@inproceedings{QQPlots,
+ author = {Langkabel, Holger},
+ year = {2016},
+ month = {03},
+ pages = {105-117},
+ title = {QQ-Plots als Instrument zum Vergleich von Verteilungen},
+ volume = {20},
+ booktitle = {Konferenz der SAS-Anwender in Forschung und Entwicklung},
+ url = {http://de.saswiki.org/wiki/KSFE_2016#Datenvisualisierung}
+}
+
 @article{IKSurvey,
  author = {Aristidou, A. and Lasenby, J. and Chrysanthou, Y. and Shamir, A.},
   title = {Inverse Kinematics Techniques in Computer Graphics: A Survey},
@@ -88,7 +64,7 @@
  pages = {263-270},
  title = {Computational Modeling for the Computer Animation of Legged Figures},
  volume = {19},
- journal = {ACM Siggraph Computer Graphics},
+ booktitle = {ACM Siggraph Computer Graphics},
  doi = {10.1145/325334.325244},
  url = {https://dl.acm.org/doi/10.1145/325334.325244}
 }
@@ -260,6 +236,17 @@
  urldate = {2020-05-06}
 }
 
+@online{NoMansSky,
+ title = {No Man's Sky},
+ url = {https://www.nomanssky.com/},
+ urldate = {2019-10-08}
+}
+
+@online{NoMansSkyDevelopment,
+ title = {Development of No Man's Sky},
+ url = {https://en.wikipedia.org/wiki/Development_of_No_Man\%27s_Sky},
+ urldate = {2020-05-21}
+}
 
 %%%%%%%
 % PCA %
@@ -291,7 +278,7 @@
  month = {01},
  pages = {19-26},
  title = {An Automatic modeling of human bodies from sizing parameters},
- journal = {Proceedings of the Symposium on Interactive 3D Graphics},
+ booktitle = {Proceedings of the Symposium on Interactive 3D Graphics},
  url = {https://dl.acm.org/doi/10.1145/641480.641487}
 }
 
@@ -307,6 +294,12 @@
 %%%%%%%%%%%%
 % Biologie %
 %%%%%%%%%%%%
+
+@online{vertebrateExtraLimbs,
+ title = {Vertebrate with Extra Limbs},
+ url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/VertebrateWithExtraLimbs},
+ urldate = {2020-05-07}
+}
 
 @article{homology,
  author = {Olsson, Lennart and Hoßfeld, Uwe},
@@ -439,5 +432,27 @@
   year={1900},
   publisher={Dietrichsche Verlagsbuchhandlung},
   address = {Leipzig}
+}
+
+%%%%%%%%%%%%%
+% Mythology %
+%%%%%%%%%%%%%
+
+@online{centaurs,
+ title = {Our Centaurs Are Different aka: Centauroid Form},
+ url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/CentauroidForm},
+ urldate = {2020-05-07}
+}
+
+@online{pegasus,
+ title = {Pegasus},
+ url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus},
+ urldate = {2020-05-07}
+}
+
+@online{direhorse,
+ title = {Avatar Schreckenspferd},
+ url = {https://james-camerons-avatar.fandom.com/de/wiki/Schreckenspferd},
+ urldate = {2020-05-21}
 }
 
