--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -8,7 +8,7 @@
 
 Werden Inhalte, wie Texturen oder 3D-Objekte, generiert, ohne dass diese vor der Ausführung des Algorithmus festgelegt wurden, so wird dies als \emph{prozedurale Generierung} (PG) bezeichnet.
 Ursprünglich wurde PG verwendet, weil der Speicherplatz auf Computern sehr begrenzt war. Große 3D-Landschaften oder andere vorgefertigte künstlerische Werke konnten nicht gespeichert werden.\\
-Die Demoszene entstand in den 1980er Jahren und treibt PG ins Extreme. Sie zeigt, dass beeindruckende Ergebnisse trotz stark limitiertem Speicherplatz möglich sind \bzw wie man das volle Potential von Computerhardware ausschöpft  \cite{DemoScene}. 
+Die Demoszene entstand in den 1980er Jahren und treibt PG ins Extreme. Sie zeigt mit künstlerischen Inhalten, dass beeindruckende Ergebnisse trotz stark limitiertem Speicherplatz möglich sind \bzw wie man das volle Potential von Computerhardware ausschöpft  \cite{DemoScene}. 
 
 Auf heutigen Rechnern ist der Speicherplatz nicht mehr so begrenzt und es kann viel Inhalt für \zb PC-Spiele von Künstlern vorgefertigt werden. Trotzdem behält PG ihre Daseinsberechtigung, denn der Entwurf komplexer Inhalte, wie beispielsweise Landschaften mit viel Vegetation, ist aufwändig und benötigt viel Zeit. Hier können wieder Algorithmen aus der PG eingesetzt werden um Zeit und Arbeit zu sparen. Sie können sowohl verwendet werden um fertige 3D-Modelle zu generieren, als auch um als Inspiration und Hilfe für den Künstler zu dienen. \emph{SpeedTree} \cite{SpeedTree} ist ein Beispiel für Software, die für die Generierung von Vegetation verwendet wird. Sie unterstützt und beschleunigt die Erstellung von Szenen mit viel Vegetation. \cite{PCGSurvey_videoGames}
 
@@ -108,12 +108,17 @@ Wenn zwei Symbole direkt aufeinander folgen, so bedeutet das, dass das linke Ele
 \section{Quantil-Quantil-Diagramme} 
 \label{qqdiagrams}
 
- \begin{itemize}
-  \item QQ Diagramme erklären
-  \item negative Werte sind ganz normal, da inverse CDF bei einem Mittelwert von 0 bei Werten < 0.5 negativ ist
-  \item welche Methode um Unterscheidungsanteil auszurechnen? \url{https://de.wikipedia.org/wiki/Quantil-Quantil-Diagramm} (verschiedene Sachen ausprobieren, zeigen dass egal?
-  \item noch genauer: "`Zahl"' ausrechnen (paper)? (oder als Alternative vorschlagen)
- \end{itemize}
+Quantil-Quantil-Diagramme sind eine grafische Methode um zu testen, ob eine Menge von Stichproben eine bestimmte Verteilung hat. 
+Seien nun $x_1, x_2,\dots, x_n$ die Stichproben und $F$ die Verteilungsfunktion derjenigen Verteilung, gegen die getestet werden soll. Die Verteilungsfunktion gibt für einen Wert $x$ an, wie groß die Wahrscheinlichkeit ist das die Zufallsvariable einen Wert $\leq x$ annimmt. Zunächst werden die Stichproben aufsteigen sortiert, was $x_{(1)}, x_{(2)},\dots, x_{(n)}$ ergibt. Dann sollte
+\[ F(x_{(i)}) \approx \frac{i}{n} \]
+gelten, da $i$ Werte $\leq x_{(i)}$ beobachtet wurden. Die geschätzte Wahrscheinlichkeit dafür mit der beobachteten Verteilung einen Wert $\leq x_{(i)}$ zu erzeugen ist $\frac{i}{n}$ bei hinreichend großem $n$. Es gilt also
+\[ x_{(i)} \approx F^{-1}\left(\frac{i}{n}\right), \]
+wobei $F^{-1}$ die inverse Verteilungsfunktion ist. Sie gibt für einen Wert $y$ den kleinsten Wert $x$ an, für den gilt, dass $F(x) > y$, also das $y$-Quantil.
+Trägt man nun die sortierten Stichproben gegen die entsprechenden Quantile in ein Diagramm ab, und die angenommene Verteilung ist korrekt, so liegen die Punkte annähernd auf einer Geraden mit Steigung $1$ durch den Ursprung. \cite[Kapitel 1 und 2]{QQPlots}
+
+Den Werten $x_{(i)}$ einfach das $\frac{i}{n}$-Quantil zuzuordnen ist insofern schwierig, als dass es suggeriert, dass alle Werte, die mit der angenommenen Verteilung generiert werden, kleiner als $x_{(n)}$ sind. Deshalb gibt es verschiedene andere Möglichkeiten die Quantile zuzuordnen. Sie liefern aber für $n \rightarrow \infty$ alle das gleiche Ergebnis. Sogenannte "`Rankit Plots"' verwenden folgende Zuordnung:
+\[ x_{(i)} \approx F^{-1}\left(\frac{i - 0,5}{n}\right). \]
+Diese Zuordnung wird auch in dieser Arbeit verwendet.
 
 
 %-------------------------------
